--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,10 @@
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos eaque
         veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem
-        et hic optio inventore odio.
+        et hic optio inventore odio. et hic optio inventore odio. et hic optio
+        inventore odio. et hic optio inventore odio. inventore odio. et hic
+        optio inventore odio. inventore odio. et hic optio inventore odio.
+        inventore odio. et hic optio inventore odio.
       </p>
       <ul>
         <li>1</li>
