--- a/profile.html
+++ b/profile.html
@@ -7,34 +7,29 @@
     <title>My Profile</title>
   </head>
   <body>
-    <div class="header">
-      <h1>Daniel</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos eaque
-        veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem
-        et hic optio inventore odio. et hic optio inventore odio. et hic optio
-        inventore odio. et hic optio inventore odio. inventore odio. et hic
-        optio inventore odio. inventore odio. et hic optio inventore odio.
-        inventore odio. et hic optio inventore odio.
-      </p>
-      <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>6</li>
-        <li>6</li>
-        <li>6</li>
-        <li>6</li>
-        <li>6</li>
-        <li>6</li>
-      </ul>
-      <img
-        src="../Home/Home-Acer-YT-repo/code-addict-HTML-CSS/html-css-tutorial-source-code-master/projects/project1(Coffee Project)/images/coffeeLogo.jfif"
-        alt=""
-      />
-    </div>
+    <h1>Daniel Tsvetanov Goergiev</h1>
+    <img src="./images/IMG_9205 G.jpg" alt="" />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos eaque
+      veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem et
+      hic optio inventore odio. et hic optio inventore odio. et hic optio
+      inventore odio. et hic optio inventore odio. inventore odio. et hic optio
+      inventore odio. inventore odio. et hic optio inventore odio. inventore
+      odio. et hic optio inventore odio.
+    </p>
+    <ul>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>6</li>
+      <li>6</li>
+      <li>6</li>
+      <li>6</li>
+      <li>6</li>
+      <li>6</li>
+    </ul>
   </body>
 </html>
