--- a/profile.html
+++ b/profile.html
@@ -9,22 +9,7 @@
   <body>
     <h1>Daniel Tsvetanov Goergiev</h1>
     <img src="./images/IMG_9205 G.jpg" alt="" />
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos eaque
-      veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem et
-      veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem et
-      veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem et
-      veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem et
-      veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem et
-      veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem et
-      veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem et
-      veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem et
-      veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem et
-      veritatis quas saepe aperiam incidunt, facilis atque nulla, illo autem et
-      hic optio inventore odio. et hic optio inventore odio. et hic optio
-      inventore odio. et hic optio inventore odio. inventore odio. et hic optio
-      inventore odio. inventore odio. et hic optio inventore odio. inventore
-      odio. et hic optio inventore odio.
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At optio vitae sapiente, adipisci unde suscipit ea corporis illum sequi distinctio autem corrupti tenetur, quisquam consequuntur, nobis sint nesciunt placeat! Porro officia mollitia quae iusto quasi cumque amet ad rerum minus impedit nostrum, inventore iste est, natus fugiat praesentium? Assumenda, magni?
     </p>
     <ul>
       <li>1</li>
