--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Daniel Tsvetanov Goergiev</h1>
     <img src="./images/IMG_9205 G.jpg" alt="" />
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At optio vitae sapiente, adipisci unde suscipit ea corporis illum sequi distinctio autem corrupti tenetur, quisquam consequuntur, nobis sint nesciunt placeat! Porro officia mollitia quae iusto quasi cumque amet ad rerum minus impedit nostrum, inventore iste est, natus fugiat praesentium? Assumenda, magni?
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae magni rem nulla aut perspiciatis sint ratione facilis id nesciunt accusamus! Facilis explicabo neque voluptatum magni tempora quod minus quia eligendi labore esse, similique quis saepe ullam tenetur libero maxime eum. In veniam, nesciunt, blanditiis nobis rerum corporis iure, dolorem deserunt ad voluptatum natus et eveniet asperiores aut ullam dolore. Libero, fuga rem? Quisquam cum incidunt dolor dignissimos quis suscipit placeat non cupiditate earum quam necessitatibus ipsa esse voluptates totam assumenda fugit enim, eveniet natus sunt facere, similique quasi facilis. Doloribus ipsum minus sequi amet harum dicta tempora nobis labore sit?
     </p>
     <ul>
       <li>1</li>
