--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="./style.css" />
+
     <title>Index</title>
   </head>
   <body>
+    <!-- NAV -->
+    <nav>
+      <a href="./profile.html">Navigate To Profile</a>
+    </nav>
+    <!-- END OF NAV -->
     <h2>1Number</h2>
     <h2>2Number</h2>
     <h2>3Number</h2>
