--- a/profile.html
+++ b/profile.html
@@ -4,23 +4,59 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./style.css" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="./style.css" />
 
     <title>My Profile</title>
   </head>
   <body>
-    <h1>Daniel Tsvetanov Goergiev</h1>
-    <img src="./images/IMG_9205 G.jpg" alt="" />
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae magni rem nulla aut perspiciatis sint ratione facilis id nesciunt accusamus! Facilis explicabo neque voluptatum magni tempora quod minus quia eligendi labore esse, similique quis saepe ullam tenetur libero maxime eum. In veniam, nesciunt, blanditiis nobis rerum corporis iure, dolorem deserunt ad voluptatum natus et eveniet asperiores aut ullam dolore. Libero, fuga rem? Quisquam cum incidunt dolor dignissimos quis suscipit placeat non cupiditate earum quam necessitatibus ipsa esse voluptates totam assumenda fugit enim, eveniet natus sunt facere, similique quasi facilis. Doloribus ipsum minus sequi amet harum dicta tempora nobis labore sit?
-    </p>
-    <ul>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
-      <li>4</li>
-      <li>5</li>
-      <li>6</li>
-      <li>7</li>
-      <li>8</li>
+    <!-- HEADER -->
+    <header>
+      <h1>Daniel Tsvetanov Goergiev</h1>
+      <!-- NAV -->
+      <nav>
+        <a href="./index.html">Navigate To Index</a>
+      </nav>
+      <!-- END OF NAV -->
+    </header>
+    <!-- END OF HEADER -->
+
+    <!-- MAIN -->
+    <main>
+      <!-- ARTICLE -->
+      <article>
+        <img src="./images/IMG_9205 G.jpg" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae magni
+          rem nulla aut perspiciatis sint ratione facilis id nesciunt accusamus!
+          Facilis explicabo neque voluptatum magni tempora quod minus quia
+          eligendi labore esse, similique quis saepe ullam tenetur libero maxime
+          eum. In veniam, nesciunt, blanditiis nobis rerum corporis iure,
+          dolorem deserunt ad voluptatum natus et eveniet asperiores aut ullam
+          dolore. Libero, fuga rem? Quisquam cum incidunt dolor dignissimos quis
+          suscipit placeat non cupiditate earum quam necessitatibus ipsa esse
+          voluptates totam assumenda fugit enim, eveniet natus sunt facere,
+          similique quasi facilis. Doloribus ipsum minus sequi amet harum dicta
+          tempora nobis labore sit?
+        </p>
+      </article>
+      <!-- END OF ARTICLE -->
+
+      <!-- ARTICLE -->
+      <article>
+        <ul>
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+          <li>4</li>
+          <li>5</li>
+          <li>6</li>
+          <li>7</li>
+          <li>8</li>
+        </ul>
+      </article>
+      <!-- END OF ARTICLE -->
+    </main>
+    <!-- END OF MAIN -->
   </body>
 </html>
