--- a/website-asignment/profile.html
+++ b/website-asignment/profile.html
@@ -12,13 +12,17 @@
     <!-- HEADER -->
     <header>
       <h1>Daniel Tsvetanov Goergiev</h1>
-      <!-- NAV -->
-      <nav>
-        <a href="./index.html">Navigate To Index</a>
-      </nav>
-      <!-- END OF NAV -->
     </header>
     <!-- END OF HEADER -->
+
+    <!-- NAV -->
+    <nav class="navbar">
+      <a href="./index.html">Navigate To Index</a>
+      <a href="./dashboard.html">Navigate To Dashboardx</a>
+      <a href="./faq.html">Navigate To FAQ</a>
+      <a href="./blog.html">Navigate To Blog</a>
+    </nav>
+    <!-- END OF NAV -->
 
     <!-- MAIN -->
     <main>
