--- a/website-asignment/faq.html
+++ b/website-asignment/faq.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSS -->
-    <link rel="stylesheet" href="./style.css" />
-    <title>Index</title>
+    <title>FAQ</title>
   </head>
   <body>
+    <!-- HEADER -->
+    <header>
+      <h1>Daniel Tsvetanov Goergiev</h1>
+    </header>
+    <!-- END OF HEADER -->
+
     <!-- NAV -->
     <nav class="navbar">
-      <a href="./profile.html">Navigate To Profile</a>
+      <a href="./index.html">Navigate To Index</a>
       <a href="./dashboard.html">Navigate To Dashboardx</a>
-      <a href="./faq.html">Navigate To FAQ</a>
+      <a href="./profile.html">Navigate To Profile</a>
       <a href="./blog.html">Navigate To Blog</a>
     </nav>
     <!-- END OF NAV -->
