--- a/website-asignment/faq.html
+++ b/website-asignment/faq.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="./style.css" />
+
     <title>FAQ</title>
   </head>
-  <body>
-    <!-- HEADER -->
-    <header>
-      <h1>Daniel Tsvetanov Goergiev</h1>
-    </header>
+  <  <!-- HEADER -->
+    <div class="header-div">
+      <header>
+        <h1>Daniel Tsvetanov Goergiev</h1>
+      </header>
+    </div>
     <!-- END OF HEADER -->
 
     <!-- NAV -->
-    <nav class="navbar">
-      <a href="./index.html">Navigate To Index</a>
-      <a href="./dashboard.html">Navigate To Dashboardx</a>
-      <a href="./profile.html">Navigate To Profile</a>
-      <a href="./blog.html">Navigate To Blog</a>
-    </nav>
+    <div class="navbar-div">
+      <nav class="navbar">
+        <a href="./index.html">Navigate To Index</a>
+        <a href="./dashboard.html">Navigate To Dashboardx</a>
+        <a href="./profile.html">Navigate To Profile</a>
+        <a href="./blog.html">Navigate To Blog</a>
+      </nav>
+    </div>
     <!-- END OF NAV -->
   </body>
 </html>
