--- a/website-asignment/index.html
+++ b/website-asignment/index.html
@@ -9,13 +9,23 @@
     <title>Index</title>
   </head>
   <body>
+    <!-- HEADER -->
+    <div class="header-div">
+      <header>
+        <h1>Daniel Tsvetanov Goergiev</h1>
+      </header>
+    </div>
+    <!-- END OF HEADER -->
+
     <!-- NAV -->
-    <nav class="navbar">
-      <a href="./profile.html">Navigate To Profile</a>
-      <a href="./dashboard.html">Navigate To Dashboardx</a>
-      <a href="./faq.html">Navigate To FAQ</a>
-      <a href="./blog.html">Navigate To Blog</a>
-    </nav>
+    <div class="navbar-div">
+      <nav class="navbar">
+        <a href="./profile.html">Navigate To Profile</a>
+        <a href="./dashboard.html">Navigate To Dashboardx</a>
+        <a href="./faq.html">Navigate To FAQ</a>
+        <a href="./blog.html">Navigate To Blog</a>
+      </nav>
+    </div>
     <!-- END OF NAV -->
   </body>
 </html>
