--- a/website-asignment/profile.html
+++ b/website-asignment/profile.html
@@ -10,18 +10,22 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header>
-      <h1>Daniel Tsvetanov Goergiev</h1>
-    </header>
+    <div class="header-div">
+      <header>
+        <h1>Daniel Tsvetanov Goergiev</h1>
+      </header>
+    </div>
     <!-- END OF HEADER -->
 
     <!-- NAV -->
-    <nav class="navbar">
-      <a href="./index.html">Navigate To Index</a>
-      <a href="./dashboard.html">Navigate To Dashboardx</a>
-      <a href="./faq.html">Navigate To FAQ</a>
-      <a href="./blog.html">Navigate To Blog</a>
-    </nav>
+    <div class="navbar-div">
+      <nav class="navbar">
+        <a href="./index.html">Navigate To Index</a>
+        <a href="./dashboard.html">Navigate To Dashboardx</a>
+        <a href="./faq.html">Navigate To FAQ</a>
+        <a href="./blog.html">Navigate To Blog</a>
+      </nav>
+    </div>
     <!-- END OF NAV -->
 
     <!-- MAIN -->
