finihsed landing page 8 Sep

--- a/website-asignment/index.html
+++ b/website-asignment/index.html
@@ -74,11 +74,11 @@
           <a href="#" class="close" onclick="closeSideMenu()">
             <i class="fas fa-times"></i>
           </a>
-          <a href="#" class="sidebar-link">Home</a>
-          <a href="#" class="sidebar-link">About</a>
-          <a href="#" class="sidebar-link">Services</a>
-          <a href="#" class="sidebar-link">Portfolio</a>
-          <a href="#" class="sidebar-link">Contact</a>
+          <a href="https://hz.nl/uploads/documents/Regelingen/OERS/2021-2022/HZ-Course-and-Examination-Regulations-2021-2022.pdf" class="sidebar-link" target="_">HBO-ICT CER</a>
+          <a href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf" class="sidebar-link" target="_">HBO-ICT IR</a>
+          <a href="https://learn.hz.nl/my/" class="sidebar-link" target="_">HZ Learn</a>
+          <a href="https://github.com/geor0014/geor0014.github.io" class="sidebar-link" target="_">GitHub</a>
+          <a href="https://teams.microsoft.com/l/channel/19%3a2e2afa0286b04932be16cb8ad2d9d2c0%40thread.skype/General?groupId=95bddebc-a340-4d88-81fc-b80e0bfc70c3&tenantId=4c16deb3-342d-4fca-bcd5-b1429308034c" class="sidebar-link" target="_">Teams</a>
         </div>
       </section>
       <!-- END OFF SIDEBAR -->
