--- a/website-asignment/index.html
+++ b/website-asignment/index.html
@@ -122,20 +122,19 @@
           <!-- end of   single skill  -->
           <!-- single skill  -->
           <article class="skills-item">
-            <i class="fa fa-map"></i>
-            <h1>Optimized</h1>
+            <i class="fa fa-language"></i>
+            <h1> It is a language</h1>
             <p>
-           Lorem ipsum dolor sit amet.
+                Before enrolling in the ICT programme I completed my bachelor’s degree in Applied Linguistics, initially I thought IT and languages belonged in different categories, but I very quickly realized that the two are very similar.  I would really love to take my passion for human languages and the experience from my previous studies and apply it to my future IT carrier path. 
             </p>
           </article>
           <!-- end of   single skill  -->
           <!-- single skill  -->
           <article class="skills-item">
-            <i class="fa fa-desktop"></i>
-            <h1>Retina</h1>
+            <i class="fa fa-lightbulb"></i>
+            <h1>"Eureka"</h1>
             <p>
-           Lorem ipsum dolor sit amet.
-            </p>
+              I love to solve problems. I would like also to think that I am proficient at it as well. My fascination with problem solving started from installing games on my computer, which I would later uninstall without ever playing them because the process of solving all the small problems that came up was more interesting to me than the games themselves. I believe the feeling of accomplishment and that “eureka” moment I get when I, for example solve a simple bug in a code or understand what a particular line of code does, makes all the hours spend in front of the screen worth it. 
           </article>
           <!-- end of   single skill  -->
         </div>
@@ -154,10 +153,10 @@
             <i class="fab fa-instagram"></i>
           </a>
           <a href="#" class="footer-single-icon">
-            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="#" class="footer-single-icon">
-            <i class="fab fa-twitter"></i>
+            <i class="fab fa-github-alt"></i>
           </a>
         </div>
       </footer>
