named alt images

--- a/website-asignment/index.html
+++ b/website-asignment/index.html
@@ -39,7 +39,7 @@
             </li>
             <!-- end of nav button -->
             <li>
-              <img src="./images/IMG_9205 G.jpg" class="profile-pic" />
+              <img src="./images/IMG_9205 G.jpg" class="profile-pic" alt="passport-photo"/>
             </li>
             <li class="active list-item">
               <i class="fas fa-home"></i>
@@ -63,7 +63,7 @@
             </li>
             <li>
               <a href="https://hz.nl/en " target="_">
-                <img src="./images/HZ.jpg" class="hz-logo" />
+                <img src="./images/HZ.jpg" class="hz-logo" alt="HZ-uni-logo" />
               </li>
             </a>
           </ul>
