--- a/website-asignment/dashboard.html
+++ b/website-asignment/dashboard.html
@@ -20,7 +20,7 @@
     </script>
     
     <!-- CSS -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles/dashboard.css" />
 
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="./fontawesome-free-5.15.4-web/css/all.css" />
