--- a/website-asignment/index.html
+++ b/website-asignment/index.html
@@ -20,7 +20,7 @@
     </script>
     
     <!-- CSS -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
 
     <!-- FONTAWESOME -->
     <link rel="stylesheet" href="./fontawesome-free-5.15.4-web/css/all.css" />
@@ -109,15 +109,15 @@
           <!-- single skill  -->
           <article class="skills-item">
             <i class="fa fa-code"></i>
-            <h1>Code</h1>
-            <p>Why I chose it</p>
+            <h1>It is the next logical step for me</h1>
+            <p>As a person with a linguistic background, I believe that programming is the “language” of the future and I believe that, although, it might be different than the other languages that I have studied before, my previous experience will really be of use to me in this programme, because just like human languages share similar concepts so do programming languages. </p>
           </article>
           <!-- end of   single skill  -->
           <!-- single skill  -->
           <article class="skills-item">
-            <i class="fa fa-file"></i>
-            <h1>Documented</h1>
-            <p>Expectations</p>
+            <i class="fa fa-broadcast-tower"></i>
+            <h1>High Hopes</h1>
+            <p>Communication has always taken a huge portion of my interest.  I have never been much of a sporty person or an artistic one for that matter. But I have always been fascinated by human and machine communication and my goal has always been to combine the two because ,to me at least, it sounds like a perfect match. </p>
           </article>
           <!-- end of   single skill  -->
           <!-- single skill  -->
@@ -134,7 +134,7 @@
             <i class="fa fa-lightbulb"></i>
             <h1>"Eureka"</h1>
             <p>
-              I love to solve problems. I would like also to think that I am proficient at it as well. My fascination with problem solving started from installing games on my computer, which I would later uninstall without ever playing them because the process of solving all the small problems that came up was more interesting to me than the games themselves. I believe the feeling of accomplishment and that “eureka” moment I get when I, for example solve a simple bug in a code or understand what a particular line of code does, makes all the hours spend in front of the screen worth it. 
+              I love to solve problems. I would also like to think that I am proficient at it as well. My fascination with problem solving started from installing games on my computer, which I would later uninstall without ever playing them because the process of solving all the small problems that came up was more interesting to me than the games themselves. I believe the feeling of accomplishment and that “eureka” moment I get when I, for example solve a simple bug in a code or understand what a particular line of code does, makes all the hours spend in front of the screen worth it. 
           </article>
           <!-- end of   single skill  -->
         </div>
