--- a/website-asignment/faq.html
+++ b/website-asignment/faq.html
@@ -89,60 +89,56 @@
       
       <!-- PARAGRAPH 1 -->
       <section class="item para-1">
-        <header id="banner">
-          <div class="banner-title">
-            <h1 class="banner-text">Daniel Georgiev</h1>
-            <div class="banner-underline"></div>
-            <div class="banner-btn">
-              <button type="button"><a href="./profile.html">More About Me</a> </button>
-              <button type="button"><a href="index.html#target">Why I chose HBO-ICT</a> </button>
-            </div>
-          </div>
-        </header>
+        <div id="faq-container">
+         <h2>Freqently Asked Questions</h2>
+        <!-- one question -->
+        <div class="accordion">
+          <div class="icon"><i class="fas fa-plus-circle"></i></div>
+          <h5>How can you print a document from your laptop at HZ?</h5>
+        </div>
+        <div class="panel">
+          <p>By Simply connecting to one of the printers at school.</p>
+        </div>
+        <!-- end of one question -->
+        <!-- one question -->
+        <div class="accordion">
+          <div class="icon"><i class="fas fa-plus-circle"></i></div>
+          <h5>How can you scan a document a send it to your laptop at HZ?</h5>
+        </div>
+        <div class="panel">
+          <p>Use the same printer, scan your paper and it should added on yourpc if you do it right.</p>
+        </div>
+        <!-- end of one question -->
+        <!-- one question -->
+        <div class="accordion">
+          <div class="icon"><i class="fas fa-plus-circle"></i></div>
+          <h5>What do you need to do when you are sick / show symptoms of coronavirus?</h5>
+        </div>
+        <div class="panel">
+          <p>Contact the teachers/helpdesk at school and stay home. Follow the lessons on stream to compensate for that unusual sickness.</p>
+        </div>
+        <!-- end of one question -->
+        <!-- one question -->
+        <div class="accordion">
+          <div class="icon"><i class="fas fa-plus-circle"></i></div>
+          <h5>How can you book a project space in one of the wings?</h5>
+        </div>
+        <div class="panel">
+          <p>You can book a room on the HZ page after logging in by pressing the Selfservice Portal, it should be easy from thereon out.</p>
+        </div>
+        <!-- end of one question -->
+        <!-- one question -->
+        <div class="accordion">
+          <div class="icon"><i class="fas fa-plus-circle"></i></div>
+          <h5>What are the instructions if you want to park your car at the HZ parking lot?</h5>
+        </div>
+        <div class="panel">
+          <p>You must park your car "across the road", at the parking lot of the former PEZM.</p>
+        </div>
+        <!-- end of one question -->
+        </div>
       </section>
       <!-- END OF PARAGRAPH 1 -->
-
-      <!-- PARAGRAPTH 2 -->
-      <section class="item para-2" id="target">
-        <div id="skills">
-        <div class="skills-container">
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-code"></i>
-            <h1>Code</h1>
-            <p>Why I chose it</p>
-          </article>
-          <!-- end of   single skill  -->
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-file"></i>
-            <h1>Documented</h1>
-            <p>Expectations</p>
-          </article>
-          <!-- end of   single skill  -->
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-map"></i>
-            <h1>Optimized</h1>
-            <p>
-           Lorem ipsum dolor sit amet.
-            </p>
-          </article>
-          <!-- end of   single skill  -->
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-desktop"></i>
-            <h1>Retina</h1>
-            <p>
-           Lorem ipsum dolor sit amet.
-            </p>
-          </article>
-          <!-- end of   single skill  -->
-        </div>
-    </div>
-    <!-- END OF SKILLS  -->
-      </section>
-      <!-- END OF PARAGRAPTH 2 -->
 
       <!-- FOOTER -->
       <footer class="item footer">
@@ -163,5 +159,6 @@
       </footer>
       <!-- END OF FOOTER -->
     </div>
+    <script src="./scripts/faq.js"></script>
   </body>
 </html>
