question touch-up

--- a/website-asignment/faq.html
+++ b/website-asignment/faq.html
@@ -136,6 +136,15 @@
           <p>You must park your car "across the road", at the parking lot of the former PEZM.</p>
         </div>
         <!-- end of one question -->
+        <!-- one question -->
+        <div class="accordion">
+          <div class="icon"><i class="fas fa-plus-circle"></i></div>
+          <h5>How to get a Student travel product?</h5>
+        </div>
+        <div class="panel">
+          <p>On DUO you can find all the information you need and the requirements for it.</p>
+        </div>
+        <!-- end of one question -->
         </div>
       </section>
       <!-- END OF PARAGRAPH 1 -->
