--- a/website-asignment/index.html
+++ b/website-asignment/index.html
@@ -116,8 +116,8 @@
           <!-- single skill  -->
           <article class="skills-item">
             <i class="fa fa-broadcast-tower"></i>
-            <h1>High Hopes</h1>
-            <p>Communication has always taken a huge portion of my interest.  I have never been much of a sporty person or an artistic one for that matter. But I have always been fascinated by human and machine communication and my goal has always been to combine the two because ,to me at least, it sounds like a perfect match. </p>
+            <h1>My way of expression</h1>
+            <p>I have always enjoyed making things from scratch. Which is a bit paradoxical because I have never been an artistic person. I am not able to sing, I don't play any instruments and I cannot paint to save my life. But ever since I printed my first "Hello World" I felt "power" in my hands. I created something. What is more, because the world of IT is so vast it is just impossible to get bored of it. </p>
           </article>
           <!-- end of   single skill  -->
           <!-- single skill  -->
