almost done Profile

--- a/website-asignment/profile.html
+++ b/website-asignment/profile.html
@@ -89,58 +89,116 @@
       
       <!-- PARAGRAPH 1 -->
       <section class="item para-1">
-        <header id="banner">
-          <div class="banner-title">
-            <h1 class="banner-text">Daniel Georgiev</h1>
-            <div class="banner-underline"></div>
-            <div class="banner-btn">
-              <button type="button"><a href="./profile.html">More About Me</a> </button>
-              <button type="button"><a href="index.html#target">Why I chose HBO-ICT</a> </button>
-            </div>
-          </div>
-        </header>
+         <div class="about">
+            <div class="about__center">
+              <article class="about-img">
+                <img src="./images/image00279.jpeg" class="about-img__photo" />
+              </article>
+            <article class="about-info">
+              <div class="about-info__container">
+                <h3 class="about-info__small">HELLO EVERYBODY, I AM</h3>
+                <h1 class="about-info__title">Daniel Georgiev</h1>
+                <h2 class="about-info__sub">HBO-ICT Student</h2>
+                <p class="about-info__text">
+           I am a first-year student at HZ University of applied sciences. I transferred to the Netherlands to study HBO-ICT right after I finished my Bachelor's degree in applied linguistics in my home country of Bulgaria. 
+                <p class="info-txt"><i class="fa fa-calendar"></i> January 31st 1998</p>
+                <p class="info-txt"><i class="fa fa-phone"></i>+359 878 180 866</p>
+                <p class="info-txt"><i class="fa fa-envelope"></i> geor0014@hz.nl</p>
+                <p class="info-txt"><i class="fa fa-home"></i> Joost de Moorstraat 21, 4382 HK Vlissingen</p>
+                </div>
+              </div>
+            </article>
+      </div>
+    </section>  
       </section>
       <!-- END OF PARAGRAPH 1 -->
 
       <!-- PARAGRAPTH 2 -->
       <section class="item para-2" id="target">
-        <div id="skills">
-        <div class="skills-container">
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-code"></i>
-            <h1>Code</h1>
-            <p>Why I chose it</p>
+            <!-- HOBBIES SECTION -->
+        <div class="hobbies-section">
+          <!-- section title -->
+          <div class="section-title">
+            <h1 class="section-title__name">Hobbies</h1>
+          </div>
+          <!-- end of section title -->
+
+          <article class="hobbies__center">
+            <!-- single hobby -->
+            <div class="hobbies__single-hobby">
+              <div class="hobbies__single-hobby-icon">
+                <i class="fas fa-film hobby-fnt"></i>
+              </div>
+              <h2 class="hobbies__single-hobby-title">Cinema</h2>
+              <p class="hobbies__single-hobby-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                quaerat?
+              </p>
+            </div>
+            <!-- end of single hobby -->
+            <!-- single hobby -->
+            <div class="hobbies__single-hobby">
+              <div class="hobbies__single-hobby-icon">
+                <i class="fas fa-book hobby-fnt"></i>
+              </div>
+              <h2 class="hobbies__single-hobby-title">Reading</h2>
+              <p class="hobbies__single-hobby-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                quaerat?
+              </p>
+            </div>
+            <!-- end of single hobby -->
+            <!-- single hobby -->
+            <div class="hobbies__single-hobby">
+              <div class="hobbies__single-hobby-icon">
+                <i class="fas fa-dumbbell hobby-fnt"></i>
+              </div>
+              <h2 class="hobbies__single-hobby-title">Training</h2>
+              <p class="hobbies__single-hobby-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                quaerat?
+              </p>
+            </div>
+            <!-- end of single hobby -->
+            <!-- single hobby -->
+            <div class="hobbies__single-hobby">
+              <div class="hobbies__single-hobby-icon">
+                <i class="fas fa-laptop-code hobby-fnt"></i>
+              </div>
+              <h2 class="hobbies__single-hobby-title">Programming</h2>
+              <p class="hobbies__single-hobby-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                quaerat?
+              </p>
+            </div>
+            <!-- end of single hobby -->
+            <!-- single hobby -->
+            <div class="hobbies__single-hobby">
+              <div class="hobbies__single-hobby-icon">
+                <i class="fas fa-kiwi-bird hobby-fnt"></i>
+              </div>
+              <h2 class="hobbies__single-hobby-title">Collecting Rubber Duckies</h2>
+              <p class="hobbies__single-hobby-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                quaerat?
+              </p>
+            </div>
+            <!-- end of single hobby -->
+            <!-- single hobby -->
+            <div class="hobbies__single-hobby">
+              <div class="hobbies__single-hobby-icon">
+                <i class="fas fa-mountain hobby-fnt"></i>
+              </div>
+              <h2 class="hobbies__single-hobby-title">Hiking</h2>
+              <p class="hobbies__single-hobby-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
+                quaerat?
+              </p>
+            </div>
+            <!-- end of single hobby -->
           </article>
-          <!-- end of   single skill  -->
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-file"></i>
-            <h1>Documented</h1>
-            <p>Expectations</p>
-          </article>
-          <!-- end of   single skill  -->
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-map"></i>
-            <h1>Optimized</h1>
-            <p>
-           Lorem ipsum dolor sit amet.
-            </p>
-          </article>
-          <!-- end of   single skill  -->
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-desktop"></i>
-            <h1>Retina</h1>
-            <p>
-           Lorem ipsum dolor sit amet.
-            </p>
-          </article>
-          <!-- end of   single skill  -->
         </div>
-    </div>
-    <!-- END OF SKILLS  -->
+        <!-- END OF HHOBBIES SECTION -->
       </section>
       <!-- END OF PARAGRAPTH 2 -->
 
