working on table

--- a/website-asignment/dashboard.html
+++ b/website-asignment/dashboard.html
@@ -89,60 +89,114 @@
       
       <!-- PARAGRAPH 1 -->
       <section class="item para-1">
-        <header id="banner">
-          <div class="banner-title">
-            <h1 class="banner-text">Daniel Georgiev</h1>
-            <div class="banner-underline"></div>
-            <div class="banner-btn">
-              <button type="button"><a href="./profile.html">More About Me</a> </button>
-              <button type="button"><a href="index.html#target">Why I chose HBO-ICT</a> </button>
-            </div>
-          </div>
-        </header>
+        <table class="content-table">
+      <thead class="border-head">
+        <tr>
+          <td>Quartile</td>
+          <td>Course</td>
+          <td>EC</td>
+          <td>Exam</td>
+          <td>Grade</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td rowspan="5">First</td>
+          <td rowspan="2">Programme and Career Orientation</td>
+          <td>2.5</td>
+          <td>Assesment</td>
+          <td></td>
+        </tr>
+        <tr></tr>
+        <tr>
+          <td rowspan="2">Computer Science</td>
+          <td>7.5</td>
+          <td>Written</td>
+          <td></td>
+        </tr>
+        <tr></tr>
+        <tr>
+          <td>Programming Basics</td>
+          <td>5</td>
+          <td>Case Study</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="2">Second</td>
+          <td rowspan="2">Object Oriented Programming</td>
+          <td rowspan="2">10</td>
+          <td>Case Study</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Project</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="4">Third</td>
+          <td>Framework Dev.1</td>
+          <td>5</td>
+          <td>Case Study</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="3">Framework Project 1</td>
+          <td rowspan="3">7.5</td>
+          <td>Project</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Assesment</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Report</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="4">Forth</td>
+          <td rowspan="4">Framework Project 2</td>
+        </tr>
+        <tr>
+          <td rowspan="3">10</td>
+          <td>Portfolio</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Project</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Assessment</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Entire Year</td>
+          <td>Personal Professional Dev</td>
+          <td>12.5</td>
+          <td>Portfolio</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Whenever</td>
+          <td>Personality 1</td>
+          <td>1.25</td>
+          <td>Portfolio</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Entire Year</td>
+          <td>Personality 2</td>
+          <td>1.25</td>
+          <td>Portfolio</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
       </section>
       <!-- END OF PARAGRAPH 1 -->
 
-      <!-- PARAGRAPTH 2 -->
-      <section class="item para-2" id="target">
-        <div id="skills">
-        <div class="skills-container">
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-code"></i>
-            <h1>Code</h1>
-            <p>Why I chose it</p>
-          </article>
-          <!-- end of   single skill  -->
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-file"></i>
-            <h1>Documented</h1>
-            <p>Expectations</p>
-          </article>
-          <!-- end of   single skill  -->
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-map"></i>
-            <h1>Optimized</h1>
-            <p>
-           Lorem ipsum dolor sit amet.
-            </p>
-          </article>
-          <!-- end of   single skill  -->
-          <!-- single skill  -->
-          <article class="skills-item">
-            <i class="fa fa-desktop"></i>
-            <h1>Retina</h1>
-            <p>
-           Lorem ipsum dolor sit amet.
-            </p>
-          </article>
-          <!-- end of   single skill  -->
-        </div>
-    </div>
-    <!-- END OF SKILLS  -->
-      </section>
-      <!-- END OF PARAGRAPTH 2 -->
+      
 
       <!-- FOOTER -->
       <footer class="item footer">
